test/ill-formed/0060_union_param.c
union u {
  int x;
  double y;
};
void f (u a) {}
